# stock-gains

./: .gitignore  LICENSE  README.md  gains.py  investments.py  pyproject.toml  refactor_design.md
legacy/: gains.py  investments.py
src/: README.md  stock_gains.py
src/commands/: buy.py  dividend.py  fear_and_greed.py  help.py  historical_performance.py  index_performance.py  investment_history.py  investment_performance.py  portfolio_growth.py  portfolio_value.py  rebalance_suggestions.py  sell.py  settings.py
src/db/: backup_handler.py  config.py  crud.py  db_handler.py  migration_handler.py  queries.py  schema.sql
src/db/migrations/: 001_alter_volume_to_double.sql
src/fetchers/: yfinance_fetcher.py
src/requests/: yfinance_fetcher.py
src/stock_gains.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tests/: command_tests.py  crud_tests.py
src/utils/: command_completer.py  data_processing.py  db_utils.py  input_utils.py  input_validation.py  table_utils.py  yfinance_utils.py
src/utils/constants/: command_completer.py  defaults.py
tools/: json_to_db_ingestor.py
